--- a/journal/202004.md
+++ b/journal/202004.md
@@ -189,21 +189,21 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-{overview of outreach/communications/marketing activity for past month and any short-term plans}
+Decred's YouTube channel grew by 4 new videos, while Decred in Depth and Rough Consensus podcasts released 3 episodes in total (see [Media](#media) below).
 
-https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities 
+@jy-p was quoted by [8btc.com](https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities) on the distribution of fiat credit issuance and remote work.
 
-Monde PR’s achievements for April:
+Monde PR's achievements for April:
 
 - created and pitched a story idea targeted at investing, VC and tech publications 
 - created and pitched a story idea targeted at crypto and fintech publications
 - created and pitched a story idea targeted at personal finance publications 
-- submitted comments from Decred spokespeople to eight news stories
-- secured a media interview with a mainstream newswire and three email Q&As with mainstream and crypto publications 
+- submitted comments from Decred spokespeople to 8 news stories
+- secured a media interview with a mainstream newswire and 3 email Q&As with mainstream and crypto publications 
 
 News coverage secured by Monde PR:
 
-- A thought leadership piece in [ValueWalk](https://www.valuewalk.com/2020/04/open-source-response-covid-19/) by @RichardRed
+- A thought leadership piece in [ValueWalk](https://www.valuewalk.com/2020/04/open-source-response-covid-19/) by @richardred
 - An article in [Cointelegraph](https://cointelegraph.com/news/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education) featuring commentary by @jy-p on the future of stablecoins, syndicated to [Investing.com](https://www.investing.com/news/cryptocurrency-news/g20s-harsh-stance-on-stablecoin-is-a-step-forward-but-regulators-have-more-to-learn-2144200) and [Bitcoin News Network](https://www.btcnn.com/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education/) 
 
 ## Events
