--- a/journal/202004.md
+++ b/journal/202004.md
@@ -191,7 +191,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 Decred's YouTube channel grew by 4 new videos, while Decred in Depth and Rough Consensus podcasts released 3 episodes in total (see [Media](#media) below).
 
-@jy-p was quoted by [8btc.com](https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities) on the distribution of fiat credit issuance and remote work.
+@jy-p commented on fiat credit issuance and remote work in a project survey by [8btc.com](https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities). 8btc is the oldest Bitcoin forum in China.
 
 Monde PR's achievements for April:
 
