--- a/journal/202004.md
+++ b/journal/202004.md
@@ -210,14 +210,17 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+- Apr 09 - Hablemos Decred 03 - Internet. @pablito and @elian explained the PoS system. There were only 3 new viewers this time, although some lessons were learned about promoting the event and picking the optimal time. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200409-hablemosdecred-03-internet.md))
+- Apr 13 - [Jalisco Talend Land @ Home](https://www.talent-land.tv/) - Internet. { how did it go? @elian }
+- Apr 16 - Hablemos de Criptomonedas - Internet. The webinar was co-hosted with Ibero University through their innovation hub IDIT. @adcade and @elian talked about cryptocurrency and blockchain to an audience of 22 (out of 34 registrations), mostly students. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200416-hablemos-de-criptomonedas-internet.md))
+- Apr 23 - Hablemos Decred 04 - Internet. @pablito and @elian focused on exchanges and the DEX that Decred is building. Attendance was up to 15 this time, and the LATAM team is continuing to explore best ways to host such events. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200423-hablemosdecred-04-internet.md))
+- Apr 30 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/270252645/) - Internet. @Checkmate presented his BTC and DCR on-chain analytics. The recording was uploaded to [YouTube](https://www.youtube.com/watch?v=H_COE9A-t3I). { how many people joined? how did it go? }
 
 Upcoming:
 
-- May 12 - Decred Foundations at Consensus Distributed, online{link will be ready soon}. Consensus Distributed is the remote replacement for the annual Consensus conference, and Decred is one of the projects which was invited to contribute an hour of content, broken into 3 segments. In ChangeLog, @jy-p gives a review of the year's progress across all of the major aspects of the project. In Construct, @richard-red checks in contributors to some important Decred sub-projects to find out what the latest is. Featuring @lukebp on Politeia, @matheusd on dcrlnd, @chappjc and @buck54321 on dcrdex, dcrdata and TinyDecred. The third segment is Trade Secrets, where @checkmate will be giving a quick intro to his top 5 Decred on chain metrics.
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{announcements in Events domain}
+- May 12 - Decred Foundations at Consensus Distributed - Internet { link will be ready soon }. Consensus Distributed is the remote replacement for the annual Consensus conference, and Decred is one of the projects which was invited to contribute an hour of content, broken into 3 segments. In ChangeLog, @jy-p gives a review of the year's progress across all of the major aspects of the project. In Construct, @richardred checks in contributors to some important Decred subprojects to find out what the latest is. Featuring @lukebp on Politeia, @matheusd on dcrlnd, @chappjc and @buck54321 on dcrdex, dcrdata and TinyDecred. The third segment is Trade Secrets, where @Checkmate will be giving a quick intro to his top 5 Decred on-chain metrics.
+- May 14 - [BlockConf](https://blockconf.digital/) - Internet. Decred LATAM team will run a virtual booth for Decred to answer questions from the attendees. If anyone wants to help with keeping the booth active in several time zones during the 48-hour event, please contact @elian.
+- May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects. { is this still planned? }
 
 ## Media
 
