--- a/journal/202004.md
+++ b/journal/202004.md
@@ -224,36 +224,18 @@ Upcoming:
 
 ## Media
 
-{notable community efforts}
-
-{ratings news}
-
-{ hint: use the following format: (title in Sentence case) by (author) ([domain](link)) - (optional comment) }
-
 Selected articles:
 
 - Decred On-Chain: Strongest Hand Market Cap + Ratio by @PermabullNino ([medium](https://medium.com/@permabullnino/decred-on-chain-strongest-hand-market-cap-ratio-146d6854e1d6))
-- Decred Market Maker Monitoring - Phase 1 Wrap-Up by @richard-red ([blockcommons.red](https://blockcommons.red/publication/mm-phase1-wrapup/))
-- Our Network Issue #15 - featuring Decred updates from @checkmate ([substack](https://ournetwork.substack.com/p/our-network-issue-15))
-- The Bitcoin Time Machine by Phoenix Green ([medium](https://medium.com/@kencameron77/the-bitcoin-time-machine-29f228656cd3)) - compared Bitcoin with Decred 
-- https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities @jy-p quoted {rr: we don't usually feature stories with quotes here, it would be more at home in Outreach?}
-- https://cointelegraph.com/news/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education @jy-p quoted
-- https://messari.io/article/what-if-bitcoin-had-a-treasury { worthy? paywalled? }
+- Decred Market Maker Monitoring - Phase 1 Wrap-Up by @richardred ([blockcommons.red](https://blockcommons.red/publication/mm-phase1-wrapup/))
+- Our Network Issue #15 - featuring Decred updates from @Checkmate ([substack.com](https://ournetwork.substack.com/p/our-network-issue-15))
+- Decred Governance Proposal: Protecting the Treasury by Phoenix Green ([medium](https://medium.com/phoenix-green/decred-governance-proposal-protecting-the-treasury-2bcab84800ad))
+- Finance 2.0 by Phoenix Green ([medium](https://medium.com/@kencameron77/finance-2-0-5dea40e4b60e))
+- The Open-Sourced Mindset for Finance by Phoenix Green ([medium](https://medium.com/@kencameron77/open-sourced-finance-7ce8a3fdb648)) - calls to think collectively and find common grounds, and lists tools to build a community
+- 3 Things Everyone Should Know about Cryptocurrencies by Phoenix Green ([medium](https://medium.com/@kencameron77/3-things-everyone-should-know-about-cryptocurrencies-e38c3db4127b)) 
+- The Bitcoin Time Machine by Phoenix Green ([medium](https://medium.com/@kencameron77/the-bitcoin-time-machine-29f228656cd3)) - compared Bitcoin with Decred
+- What if Bitcoin had a Treasury? by Ryan Watkins ([messari.io](https://messari.io/article/what-if-bitcoin-had-a-treasury), paywalled)
 - [Decred Drive](https://twitter.com/decreddrive) keeps delivering nice weekly updates.
-
-{ These were mentioned in March Monde report but not in Media. keep? rr: We have not included stories with quotes here before}
-
-- https://www.financemagnates.com/cryptocurrency/news/fintech-experts-share-tips-for-remote-work-during-coronavirus-quarantine/ 
-- https://www.coindesk.com/remote-working-proves-unexpected-hero-as-half-of-us-economy-shifts-to-home-offices
-  - syndicated to YF https://ca.finance.yahoo.com/news/remote-working-proves-unexpected-hero-182504644.html
-- https://cointelegraph.com/news/proof-of-stake-vs-proof-of-work-which-one-is-fairer
-
-{Phoenix Green stuff, check what's good}:
-
-- https://medium.com/phoenix-green/decred-governance-proposal-protecting-the-treasury-2bcab84800ad
-- https://medium.com/@kencameron77/finance-2-0-5dea40e4b60e
-- https://medium.com/@kencameron77/open-sourced-finance-7ce8a3fdb648
-- https://medium.com/@kencameron77/3-things-everyone-should-know-about-cryptocurrencies-e38c3db4127b
 
 Translations:
 
