Outreach add Medium action

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -191,6 +191,8 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 Decred's YouTube channel grew by 4 new videos, while Decred in Depth and Rough Consensus podcasts released 3 episodes in total (see [Media](#media) below).
 
+On Medium, [Decred Drive](https://twitter.com/decreddrive) keeps delivering nice weekly updates, [Decred Spanish](https://medium.com/decred-es) is adding new articles, and [Phoenix Green](https://medium.com/@kencameron77) has emerged with writings about his crypto/Decred journey.
+
 @jy-p commented on fiat credit issuance and remote work in a project survey by [8btc.com](https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities). 8btc is the oldest Bitcoin forum in China.
 
 Monde PR's achievements for April:
@@ -235,7 +237,6 @@ Selected articles:
 - 3 Things Everyone Should Know about Cryptocurrencies by Phoenix Green ([medium](https://medium.com/@kencameron77/3-things-everyone-should-know-about-cryptocurrencies-e38c3db4127b)) 
 - The Bitcoin Time Machine by Phoenix Green ([medium](https://medium.com/@kencameron77/the-bitcoin-time-machine-29f228656cd3)) - compared Bitcoin with Decred
 - What if Bitcoin had a Treasury? by Ryan Watkins ([messari.io](https://messari.io/article/what-if-bitcoin-had-a-treasury), paywalled)
-- [Decred Drive](https://twitter.com/decreddrive) keeps delivering nice weekly updates.
 
 Translations:
 
