--- a/journal/202004.md
+++ b/journal/202004.md
@@ -240,7 +240,7 @@ Selected articles:
 
 Translations:
 
-- {}
+- Decred Journal March 2020 was translated to Arabic (@arij), Chinese (@Dominic), Polish (@kozel) and Spanish (@francov\_). @kozel is back in the game and also added the past December-February issues in Polish. Shortened Spanish versions are available on [Medium](https://medium.com/decred-es/revista-2020/home). Thank you all for building awareness of the project!
 
 Videos:
 
