--- a/journal/202004.md
+++ b/journal/202004.md
@@ -222,7 +222,6 @@ Upcoming:
 
 - May 12 - Decred Foundations at Consensus Distributed - Internet { link will be ready soon }. Consensus Distributed is the remote replacement for the annual Consensus conference, and Decred is one of the projects which was invited to contribute an hour of content, broken into 3 segments. In ChangeLog, @jy-p gives a review of the year's progress across all of the major aspects of the project. In Construct, @richardred checks in contributors to some important Decred subprojects to find out what the latest is. Featuring @lukebp on Politeia, @matheusd on dcrlnd, @chappjc, and @buck54321 on dcrdex, dcrdata and TinyDecred. The third segment is Trade Secrets, where @Checkmate will be giving a quick intro to his top 5 Decred on-chain metrics.
 - May 14 - [BlockConf](https://blockconf.digital/) - Internet. Decred LATAM team will run a virtual booth for Decred to answer questions from the attendees. If anyone wants to help with keeping the booth active in several time zones during the 48-hour event, please contact @elian.
-- May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects. { is this still planned? }
 
 ## Media
 
@@ -326,5 +325,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, Exitus, l1ndseymm, pablito, richardred, s\_ben
-- reviews and feedback: chappjc, davecgh, jholdstock, jrick, lukebp
+- reviews and feedback: chappjc, davecgh, emiliomann, jholdstock, jrick, lukebp
 - title image: {}
