grammer and spell

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -15,7 +15,7 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 - `schnorr`: improvements to safety, testing, and performance, as well as a comprehensive [README](https://github.com/decred/dcrd/blob/master/dcrec/secp256k1/schnorr/README.md) describing the custom Schnorr-based signature scheme used in Decred
 - more parts of the codebase migrated from Go's standard big integers to specialized field types, making significant performance improvements
 
-While the consensus supports Schnorr signatures, the rest of the infrastructure needed to really take advantage of their benefits is not well fleshed out and therefore they are essentially not in widespread use yet. The goal is to remedy that.
+While the consensus supports Schnorr signatures, the rest of the infrastructure needed to really take advantage of their benefits is not well fleshed out, and therefore they are essentially not in widespread use yet. The goal is to remedy that.
 
 Lots of optimizations in dcrd made over the past months have led to a "suffering from success" [meme](https://twitter.com/degeri_crypto/status/1248522626210897921): older nodes now think the new version is requesting too much data too quickly and [banning](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$158650272611269MJQhM:decred.org) it. The "banning rate" parameters will have to be adjusted to reflect the new speeds.
 
@@ -34,7 +34,7 @@ In progress:
 - new [`addtransaction`](https://github.com/decred/dcrwallet/pull/1712) command that will be particularly useful for the upcoming ticket-based VSP design
 - bug fixes and code maintenance
 
-dcrwallet is no longer a fork of [btcwallet](https://github.com/btcsuite/btcwallet) for the same reasons as dcrd, and has 137 of its own forks as of writing.
+dcrwallet is no longer a fork of [btcwallet](https://github.com/btcsuite/btcwallet) for the same reasons as dcrd and has 137 of its own forks as of writing.
 
 In progress:
 
@@ -173,9 +173,9 @@ Updates from @Checkmate:
 
 ## Integrations
 
-[dcr.blue](https://dcr.blue/) VSP announced that it will shut down in a message sent to all users with verified email on Apr 20. It was [removed](https://github.com/decred/dcrwebapi/pull/97) from the [listing](https://www.decred.org/vsp/) and Decrediton but will stay online for the rest of 2020. Since the maximum lifetime of a ticket is roughly 4.7 months, this gives users around 3 months to stop buying tickets assigned to DCR.Blue. Users are advised to backup their redeem scripts if they haven't already (a copy is available in the VSP account), and start buying tickets to a different VSP. Please avoid picking too large VSPs to maintain a healthy distribution and better security for the network. This is the first VSP to attempt a "graceful shutdown" rather than just disappearing without notice as some other VSPs have done in the past.
+[dcr.blue](https://dcr.blue/) VSP announced that it will shut down in a message sent to all users with verified email on Apr 20. It was [removed](https://github.com/decred/dcrwebapi/pull/97) from the [listing](https://www.decred.org/vsp/) and Decrediton but will stay online for the rest of 2020. Since the maximum lifetime of a ticket is roughly 4.7 months, this gives users around 3 months to stop buying tickets assigned to DCR.Blue. Users are advised to backup their redeem scripts if they haven't already (a copy is available in the VSP account) and start buying tickets to a different VSP. Please avoid picking too large VSPs to maintain a healthy distribution and better security for the network. This is the first VSP to attempt a "graceful shutdown" rather than just disappearing without notice as some other VSPs have done in the past.
 
-[decred.raqamiya.net](https://decred.raqamiya.net/) VSP that was [delisted](https://github.com/decred/dcrwebapi/pull/95) in March is now again operational and was [added back](https://github.com/decred/dcrwebapi/pull/96) to the listing. As of writing, it holds about 330 live tickets (0.8%), has 4 servers and features a custom UI.
+[decred.raqamiya.net](https://decred.raqamiya.net/) VSP that was [delisted](https://github.com/decred/dcrwebapi/pull/95) in March is now again operational and was [added back](https://github.com/decred/dcrwebapi/pull/96) to the listing. As of writing, it holds about 330 live tickets (0.8%), has 4 servers, and features a custom UI.
 
 Metal Pay [added](https://twitter.com/metalpaysme/status/1249745420206686208) [support](https://blog.metalpay.com/metal-pay-welcomes-decred/) for DCR on their marketplace. It provides another fiat onramp and works in most US states. They followed the announcement with [tweets](https://twitter.com/metalpaysme/status/1250424090172612615) about Decred.
 
@@ -214,13 +214,13 @@ Attended:
 
 - Apr 09 - Hablemos Decred 03 - Internet. @pablito and @elian explained the PoS system. There were only 3 new viewers this time, although some lessons were learned about promoting the event and picking the optimal time. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200409-hablemosdecred-03-internet.md))
 - Apr 13 - [Jalisco Talend Land @ Home](https://www.talent-land.tv/) - Internet. { how did it go? @elian }
-- Apr 16 - Hablemos de Criptomonedas - Internet. The webinar was co-hosted with Ibero University through their innovation hub IDIT. @adcade and @elian talked about cryptocurrency and blockchain to an audience of 22 (out of 34 registrations), mostly students. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200416-hablemos-de-criptomonedas-internet.md))
-- Apr 23 - Hablemos Decred 04 - Internet. @pablito and @elian focused on exchanges and the DEX that Decred is building. Attendance was up to 15 this time, and the LATAM team is continuing to explore best ways to host such events. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200423-hablemosdecred-04-internet.md))
+- Apr 16 - Hablemos de Criptomonedas - Internet. The webinar was co-hosted with Ibero University through its innovation hub IDIT. @adcade and @elian talked about cryptocurrency and blockchain to an audience of 22 (out of 34 registrations), mostly students. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200416-hablemos-de-criptomonedas-internet.md))
+- Apr 23 - Hablemos Decred 04 - Internet. @pablito and @elian focused on exchanges and the DEX that Decred is building. Attendance was up to 15 this time, and the LATAM team is continuing to explore the best ways to host such events. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200423-hablemosdecred-04-internet.md))
 - Apr 30 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/270252645/) - Internet. @Checkmate presented his BTC and DCR on-chain analytics. The recording was uploaded to [YouTube](https://www.youtube.com/watch?v=H_COE9A-t3I). { how many people joined? how did it go? }
 
 Upcoming:
 
-- May 12 - Decred Foundations at Consensus Distributed - Internet { link will be ready soon }. Consensus Distributed is the remote replacement for the annual Consensus conference, and Decred is one of the projects which was invited to contribute an hour of content, broken into 3 segments. In ChangeLog, @jy-p gives a review of the year's progress across all of the major aspects of the project. In Construct, @richardred checks in contributors to some important Decred subprojects to find out what the latest is. Featuring @lukebp on Politeia, @matheusd on dcrlnd, @chappjc and @buck54321 on dcrdex, dcrdata and TinyDecred. The third segment is Trade Secrets, where @Checkmate will be giving a quick intro to his top 5 Decred on-chain metrics.
+- May 12 - Decred Foundations at Consensus Distributed - Internet { link will be ready soon }. Consensus Distributed is the remote replacement for the annual Consensus conference, and Decred is one of the projects which was invited to contribute an hour of content, broken into 3 segments. In ChangeLog, @jy-p gives a review of the year's progress across all of the major aspects of the project. In Construct, @richardred checks in contributors to some important Decred subprojects to find out what the latest is. Featuring @lukebp on Politeia, @matheusd on dcrlnd, @chappjc, and @buck54321 on dcrdex, dcrdata and TinyDecred. The third segment is Trade Secrets, where @Checkmate will be giving a quick intro to his top 5 Decred on-chain metrics.
 - May 14 - [BlockConf](https://blockconf.digital/) - Internet. Decred LATAM team will run a virtual booth for Decred to answer questions from the attendees. If anyone wants to help with keeping the booth active in several time zones during the 48-hour event, please contact @elian.
 - May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects. { is this still planned? }
 
@@ -240,7 +240,7 @@ Selected articles:
 
 Translations:
 
-- Decred Journal March 2020 was translated to Arabic (@arij), Chinese (@Dominic), Polish (@kozel) and Spanish (@francov\_). @kozel is back in the game and also added the past December-February issues in Polish. Shortened Spanish versions are available on [Medium](https://medium.com/decred-es/revista-2020/home). Thank you all for building awareness of the project!
+- Decred Journal March 2020 was translated to Arabic (@arij), Chinese (@Dominic), Polish (@kozel), and Spanish (@francov\_). @kozel is back in the game and also added the past December-February issues in Polish. Shortened Spanish versions are available on [Medium](https://medium.com/decred-es/revista-2020/home). Thank you all for building awareness of the project!
 
 Videos:
 
@@ -253,7 +253,7 @@ Videos:
 
 Audio:
 
-- Rough Consensus Ep. 4 - Gold, Bitcoin and Decred. @mr.black, @Checkmate and @PermabullNino discuss the state of macro and crypto markets in the context of collapsing economies and unlimited QE. The conversation considers the nature of sound money and how gold, Bitcoin and Decred represent different areas of the sound money spectrum.  ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-4-gold-bitcoin-and-decred))
+- Rough Consensus Ep. 4 - Gold, Bitcoin, and Decred. @mr.black, @Checkmate, and @PermabullNino discuss the state of macro and crypto markets in the context of collapsing economies and unlimited QE. The conversation considers the nature of sound money and how gold, Bitcoin, and Decred represent different areas of the sound money spectrum.  ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-4-gold-bitcoin-and-decred))
 - Decred in Depth - Round Up 2 with @mr.black, @Checkmate and @PermabullNino. ([libsyn](https://decredindepth.libsyn.com/dcr-round-up-2-with-checkmate-permabull-nio), [youtube](https://www.youtube.com/watch?v=eb_GFdOkjwA), [soundcloud](https://soundcloud.com/decredindepth/dcr-round-up-2-with-checkmate))
 - Decred in Depth (has given up on numbering) - Chris Burniske of Placeholder VC talks about recent developments, why Decred HAS (Hypersecure Adaptable Sustainable) it, opportunities for dcrdex, and Politeia to expand the Decred ecosystem, and much more! ([libsyn](https://decredindepth.libsyn.com/chris-burniske-institutional-investment-dcr-as-a-sov-current-events-dcr-custody-solutions), [youtube](https://www.youtube.com/watch?v=Q4wbt0JLA5k), [soundcloud](https://soundcloud.com/decredindepth/chris-burniske-crypto-in-the))
 
