--- a/journal/202004.md
+++ b/journal/202004.md
@@ -189,9 +189,11 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-Decred's YouTube channel grew by 4 new videos, while Decred in Depth and Rough Consensus podcasts released 3 episodes in total (see [Media](#media) below).
+Decred's YouTube [channel](https://www.youtube.com/decredchannel) grew by 4 new videos, while Decred in Depth and Rough Consensus podcasts released 3 episodes in total (see [Media](#media) below).
 
-On Medium, [Decred Drive](https://twitter.com/decreddrive) keeps delivering nice weekly updates, [Decred Spanish](https://medium.com/decred-es) is adding new articles, and [Phoenix Green](https://medium.com/@kencameron77) has emerged with writings about his crypto/Decred journey.
+Decred Brazil [channel](https://www.youtube.com/channel/UC73wa2ddXuPWsmenVfeFTYg) keeps actively generating content. Decred Semanal ("Decred Weekly") published 5 new episodes in April which received ~150 views on average, up from ~50 views in previous months (likely a result of [improved](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$158896614628001AwmOM:decred.org) distribution tactics). The series is also available in podcast format on all major platforms like [Apple](https://podcasts.apple.com/podcast/decred-brasil/id1451017413), Google, Spotify, [SoundCloud](https://soundcloud.com/decredbrasil) and others.
+
+On Medium, [Decred Drive](https://twitter.com/decreddrive) keeps delivering nice weekly updates, [Decred Spanish](https://medium.com/decred-es) is adding new articles and translations, and [Phoenix Green](https://medium.com/@kencameron77) has emerged with writings about his crypto/Decred journey.
 
 @jy-p commented on fiat credit issuance and remote work in a project survey by [8btc.com](https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities). 8btc is the oldest Bitcoin forum in China.
 
