Integrations tweak steelbackup

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -183,8 +183,7 @@ Metal Pay [added](https://twitter.com/metalpaysme/status/1249745420206686208) [s
 
 An instant exchange [SwapSpace](https://swapspace.co/) [added](https://twitter.com/SwapSpaceCo/status/1250078395884539906) support for Decred.
 
-[Steelbackup](https://steelbackup.com/), a physical seed backup solution added a new product and also [answered](https://twitter.com/steelbackup/status/1248058631523905538) some questions on how it works and the difference between its products. 
- Currently, there are two types of products, [laser engraved] (https://steelbackup.com/product/decred-laser-engraved/),  and [laser marked] (https://steelbackup.com/product/decred-laser-marked/), the engraved one is the most robust solution as steel is removed which makes the marking grid as permanent as the steel. The laser marked product is marked with Molybdenum Disulfide solution which makes it scratch, acids, and high temperature (up to 650 degrees F) resistant. The products are designed to be simple with no moving parts, users just need a center punch (found at a local hardware store) to indent their seed. SteelBackup launched in Feb 2020 and ships worldwide.
+[Steelbackup](https://steelbackup.com/), a physical seed backup solution added a [light version](https://twitter.com/steelbackup/status/1248058631523905538) of the product. Currently, there are two types of products: [laser engraved](https://steelbackup.com/product/decred-laser-engraved/) and [laser marked](https://steelbackup.com/product/decred-laser-marked/). The engraved one is the most robust solution as steel is removed which makes the marking grid as permanent as the steel. The laser marked product is marked with molybdenum disulfide solution which makes it resistant to scratches, acids, and high temperature (up to 340 degrees C). The products are designed to be simple with no moving parts, users just need a center punch (found at a local hardware store) to indent their seed. SteelBackup launched in Feb 2020 and ships worldwide.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -328,6 +327,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, Exitus, l1ndseymm, pablito, richardred, s\_ben
+- writing and editing: bee, degeri, Exitus, l1ndseymm, pablito, richardred, s\_ben, zubair
 - reviews and feedback: chappjc, davecgh, emiliomann, jholdstock, jrick, lukebp
 - title image: {}
