Events add from elian

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -214,8 +214,9 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- Apr 09 - Hablemos Decred 03 - Internet. @pablito and @elian explained the PoS system. There were only 3 new viewers this time, although some lessons were learned about promoting the event and picking the optimal time. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200409-hablemosdecred-03-internet.md))
-- Apr 13 - [Jalisco Talend Land @ Home](https://www.talent-land.tv/) - Internet. { how did it go? @elian }
+- Apr 4 - [Paxful Conversations](https://twitter.com/paxful_LATAM/status/1245066931155148800) - Internet. @elian was invited by Paxful LATAM to talk about how to spot scams and what to look at when researching cryptocurrency fundamentals. It was not a direct Decred talk but it was mentioned as an example of good practices within the industry. The webinar was "powered by Decred" and was viewed by ~70 people.
+- Apr 9 - Hablemos Decred 03 - Internet. @pablito and @elian explained the PoS system. There were only 3 new viewers this time, although some lessons were learned about promoting the event and picking the optimal time. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200409-hablemosdecred-03-internet.md))
+- Apr 16 - [Jalisco Talend Land @ Home](https://www.talent-land.tv/) - Internet. Decred team presented a panel titled "The future of money and remote work" with the goal to explore the intersection of money, technology and remote working through the lens and experience of 4 Decred contractors in LATAM. They shared their experience working from Argentina, Colombia and Mexico, and covered the challenges and opportunities of working for Decred remotely.
 - Apr 16 - Hablemos de Criptomonedas - Internet. The webinar was co-hosted with Ibero University through its innovation hub IDIT. @adcade and @elian talked about cryptocurrency and blockchain to an audience of 22 (out of 34 registrations), mostly students. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200416-hablemos-de-criptomonedas-internet.md))
 - Apr 23 - Hablemos Decred 04 - Internet. @pablito and @elian focused on exchanges and the DEX that Decred is building. Attendance was up to 15 this time, and the LATAM team is continuing to explore the best ways to host such events. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200423-hablemosdecred-04-internet.md))
 - Apr 30 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/270252645/) - Internet. @Checkmate presented his BTC and DCR on-chain analytics. The recording was uploaded to [YouTube](https://www.youtube.com/watch?v=H_COE9A-t3I). { how many people joined? how did it go? }
@@ -327,6 +328,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, Exitus, l1ndseymm, pablito, richardred, s\_ben, zubair
+- writing and editing: bee, degeri, elian, Exitus, l1ndseymm, pablito, richardred, s\_ben, zubair
 - reviews and feedback: chappjc, davecgh, emiliomann, jholdstock, jrick, lukebp
 - title image: {}
