--- a/journal/202004.md
+++ b/journal/202004.md
@@ -281,7 +281,7 @@ Selected Twitter discussions:
 
 In April DCR was trading between USD 11.08-15.01 / BTC 0.00151-0.00179. The average daily rate was $12.34.
 
-@richardred wrote a [report](https://blockcommons.red/publication/mm-phase1-wrapup/) about the performance of the market makers. The MM activity was paid for by the [treasury](https://proposals.decred.org/proposals/2eb7ddb29f151691ba14ac8c54d53f6692c1f5e8fe06244edf7d3c33fb440bd9) 
+@richardred wrote a [report](https://blockcommons.red/publication/mm-phase1-wrapup/) about the performance of the market makers during the term of their first [proposal](https://proposals.decred.org/proposals/2eb7ddb29f151691ba14ac8c54d53f6692c1f5e8fe06244edf7d3c33fb440bd9).
 
 ## Relevant External
 
