Events, Media add from elian

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -226,7 +226,8 @@ Attended:
 Upcoming:
 
 - May 12 - Decred Foundations at Consensus Distributed - Internet { link will be ready soon }. Consensus Distributed is the remote replacement for the annual Consensus conference, and Decred is one of the projects which was invited to contribute an hour of content, broken into 3 segments. In ChangeLog, @jy-p gives a review of the year's progress across all of the major aspects of the project. In Construct, @richardred checks in contributors to some important Decred subprojects to find out what the latest is. Featuring @lukebp on Politeia, @matheusd on dcrlnd, @chappjc, and @buck54321 on dcrdex, dcrdata and TinyDecred. The third segment is Trade Secrets, where @Checkmate will be giving a quick intro to his top 5 Decred on-chain metrics.
-- May 14 - [BlockConf](https://blockconf.digital/) - Internet. Decred is a [bronze sponsor](https://twitter.com/BlockconfD/status/1251194332079697922). Decred LATAM team will run a virtual booth for Decred to answer questions from the attendees. If anyone wants to help with keeping the booth active in several time zones during the 48-hour event, please contact @elian.
+- May 14 - [Decred meetup with BlockConf](https://twitter.com/Decred_ES/status/1258165218204618759) - Internet. This will be a virtual meetup to showcase the platform and a fireside chat before the main conference. The team will give a brief on Decred's fundamentals and new developments on the pipeline.
+- May 25 - [BlockConf](https://blockconf.digital/) - Internet. Decred is a [bronze sponsor](https://twitter.com/BlockconfD/status/1251194332079697922). Decred LATAM team will run a virtual booth for Decred to answer questions from the attendees. If anyone wants to help with keeping the booth active in several time zones during the 48-hour event, please contact @elian.
 
 ## Media
 
@@ -241,6 +242,9 @@ Selected articles:
 - 3 things everyone should know about cryptocurrencies by Phoenix Green ([medium](https://medium.com/@kencameron77/3-things-everyone-should-know-about-cryptocurrencies-e38c3db4127b)) 
 - The Bitcoin time machine by Phoenix Green ([medium](https://medium.com/@kencameron77/the-bitcoin-time-machine-29f228656cd3)) - compared Bitcoin with Decred
 - What if Bitcoin had a Treasury? by Ryan Watkins ([messari.io](https://messari.io/article/what-if-bitcoin-had-a-treasury), paywalled)
+- Project Rundown interview with Decred by The Capital (former Altcoin Magazine, [medium](https://medium.com/the-capital/project-rundown-interview-with-decred-on-the-capital-8b647919a339))
+- Lets talk about Decred and remote work by @adcade (in Spanish, [medium](https://medium.com/decred-es/hablemos-decred-sobre-el-proyecto-y-sobre-el-trabajo-remoto-e5a2510364ae)))
+- Article on the 4th Decred virtual meetup about CEXs and DEXs (in Spanish, [es.cointelegraph.com](https://es.cointelegraph.com/news/decred-organizes-virtual-meeting-on-decentralized-exchanges-for-the-spanish-speaking-community))
 
 Translations:
 
