--- a/journal/202004.md
+++ b/journal/202004.md
@@ -226,6 +226,7 @@ Attended:
 Upcoming:
 
 - May 12 - Decred Foundations at Consensus Distributed - Internet { link will be ready soon }. Consensus Distributed is the remote replacement for the annual Consensus conference, and Decred is one of the projects which was invited to contribute an hour of content, broken into 3 segments. In ChangeLog, @jy-p gives a review of the year's progress across all of the major aspects of the project. In Construct, @richardred checks in contributors to some important Decred subprojects to find out what the latest is. Featuring @lukebp on Politeia, @matheusd on dcrlnd, @chappjc, and @buck54321 on dcrdex, dcrdata and TinyDecred. The third segment is Trade Secrets, where @Checkmate will be giving a quick intro to his top 5 Decred on-chain metrics.
+- May 14 - [Virtual meetup with BlockainEx](https://twitter.com/Decred_ES/status/1258905004510973953) - Internet. Decred will participate in the panel "What is decentralized governance and DAOs?" co-hosted by @adcade and @caibarrad from Decred, Nadia Alvarez from MakerDAO, Gustavo Segovia from Colony and Jhonny Gomez from BlockainEx. This panel will be livestreamed to the blockchain community in Colombia.
 - May 14 - [Decred meetup with BlockConf](https://twitter.com/Decred_ES/status/1258165218204618759) - Internet. This will be a virtual meetup to showcase the platform and a fireside chat before the main conference. The team will give a brief on Decred's fundamentals and new developments on the pipeline.
 - May 25 - [BlockConf](https://blockconf.digital/) - Internet. Decred is a [bronze sponsor](https://twitter.com/BlockconfD/status/1251194332079697922). Decred LATAM team will run a virtual booth for Decred to answer questions from the attendees. If anyone wants to help with keeping the booth active in several time zones during the 48-hour event, please contact @elian.
 
