--- a/journal/202004.md
+++ b/journal/202004.md
@@ -310,7 +310,7 @@ There have been a whole [barrage](https://www.theblockcrypto.com/post/60930/top-
 
 {relevant exchanges and websites}
 
-https://twitter.com/glassnodealerts/status/1245612312964161538
+USDT balance held on exchanges has reached a new ATH of [$1.8 billion](https://twitter.com/glassnodealerts/status/1253343292403724294) on Apr 23, according to glassnode alerts.
 
 In an update to the story about the sale of .org domain to a private equity firm, ICANN has [voted](https://twitter.com/EFF/status/1256053946289774594) to reject the sale, effectively blocking it.
 
