--- a/journal/202004.md
+++ b/journal/202004.md
@@ -273,6 +273,10 @@ Audio:
 Selected Reddit posts:
 
 - The Decred Journal's own reddit [post](https://www.reddit.com/r/decred/comments/fy493y/decred_journal_march_2020/) was the most discussed one on the subreddit this month with 42 comments!
+- The discussion of @bee's idea to add [vote reason](https://github.com/decredcommunity/issues/issues/118) information to Politeia votes [concluded](https://www.reddit.com/r/decred/comments/g2ozqc/reason_bits_for_politeia_no_votes_feature_idea/) that implementing it requires a privacy solution like a blind voting scheme.
+- Phase 1 market making report [discussion](https://www.reddit.com/r/decred/comments/g5he83/decred_market_maker_monitoring_phase_1_wrapup/) speculated about the rate of adoption.
+- [Perspectives](https://www.reddit.com/r/decred/comments/g66onn/perspectives/) thread collected 33 comments of which many are long read quality thinking.
+- [Decred: Do Different](https://www.reddit.com/r/decred/comments/g66msa/decred_challenge_do_different/) mini-game.
 - The [post](https://www.reddit.com/r/decred/comments/fyi49j/checkmate_on_twitter_cost_to_launch_a_1hr_double/) related to @Checkmate's tweet comparing DCR attack cost to other chains.
 
 Selected Twitter discussions:
