--- a/journal/202004.md
+++ b/journal/202004.md
@@ -21,7 +21,7 @@ While the consensus supports Schnorr signatures, the rest of the infrastructure 
 
 Lots of optimizations in dcrd made over the past months have led to a "suffering from success" [meme](https://twitter.com/degeri_crypto/status/1248522626210897921): older nodes now think the new version is requesting too much data too quickly and [banning](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$158650272611269MJQhM:decred.org) it. The "banning rate" parameters will have to be adjusted to reflect the new speeds.
 
-{ any perf numbers to present are welcome, like % changes, IBD times, etc }
+With all the speedups, ECDSA and Schnorr signature verification is around [25% faster](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15862341309060voZvJ:decred.org) compared to v1.5.1.
 
 The dcrd repository is no longer configured as a fork of [btcd](https://github.com/btcsuite/btcd). So many new features have been added and overall improvements made that there is very little code still in common between them. Also, one of the primary reasons for having a fork is to be able to pull in upstream changes easily. That really is not the case anymore though because the code is so different that any changes desired for dcrd would effectively have to be ported anyway. And even then, most changes made in btcd simply don't apply to dcrd anymore. The "unforking" also removes the confusion about the fork count where dcrd page showed the number of all forks of btcd (1,500+). Now it shows 235 forks for dcrd, while btcd has 1,290. Finally, it removes the annoyance and a chance for error where pressing "New pull request" would open a PR against the upstream btcd repository with all the changes on Decred's master branch.
 
